# astrocalc

AstroCalc/: AUTHORS
AstroCalc/astrocalc/: JulianDateDlg.ui  MagnitudeDlg.ui  Makefile  TeleDataDlg.ui  VergroesserungDlg.ui  astrocalc.cpp  astrocalc.h  astrocalc.pro  astrocalcbib.cpp  astrocalcbib.h  astrocalcscope.cpp  astrocalcscope.h  juliandate.cpp  juliandate.h  magdlg.cpp  magdlg.h  main.cpp  teledlg.cpp  teledlg.h  vergrdlg.cpp  vergrdlg.h
AstroCalc/astrocalc/docs/: Makefile.am  Makefile.in
AstroCalc/astrocalc/docs/de/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
AstroCalc/astrocalc/docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
AstroCalc/astrocalc/docs/en/.pics/med/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html
AstroCalc/astrocalc/icons/: astrocalc.xpm  toolJulianDate.xpm  toolMagnitude.xpm
