####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html 

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index-1.html $(prefix)/doc/astrocalc/de/index-1.html
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index-2.html $(prefix)/doc/astrocalc/de/index-2.html
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index-3.html $(prefix)/doc/astrocalc/de/index-3.html
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index-4.html $(prefix)/doc/astrocalc/de/index-4.html
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index-5.html $(prefix)/doc/astrocalc/de/index-5.html
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index-6.html $(prefix)/doc/astrocalc/de/index-6.html
	$(mkinstalldirs) $(prefix)/doc/astrocalc/de/
	$(INSTALL_DATA) $(srcdir)/index.html $(prefix)/doc/astrocalc/de/index.html

uninstall-local:
	-rm -f $(prefix)/doc/astrocalc/de/index-1.html
	-rm -f $(prefix)/doc/astrocalc/de/index-2.html
	-rm -f $(prefix)/doc/astrocalc/de/index-3.html
	-rm -f $(prefix)/doc/astrocalc/de/index-4.html
	-rm -f $(prefix)/doc/astrocalc/de/index-5.html
	-rm -f $(prefix)/doc/astrocalc/de/index-6.html
	-rm -f $(prefix)/doc/astrocalc/de/index.html

####### kdevelop will overwrite this part!!! (end)############
